2005-02-20  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c: (task_dialog_pred_cell_edited),
	(task_dialog_cell_type_hide_popup),
	(task_dialog_setup_predecessor_list): Don't make the name editable
	in the predecessor list. It's not very logical that editing the
	name of a predecessor changes which predecessor is used. Also
	fixes bug #139671.

2005-02-20  Richard Hult  <richard@imendio.com>

	* data/glade/Makefile.am:
	* data/glade/project-properties.glade:
	* data/glade/task-date-widget.glade:
	* data/glade/task-dialog.glade: Add new glade file for a task date
	editor. Change the task and project properties interfaces to use a
	common popup button.
	
	* libplanner/mrp-time.c: (mrp_time_format_locale): Add.

	* src/planner-cell-renderer-date.c (mcrd_today_clicked) 
	(mcrd_init): Implement "today" button.
	(mcrd_selected_double_click): Select on double-click.

	* src/planner-marshal.list: Clean up.

 	* src/planner-popup-button.c: New widget for popping up stuff.

	* src/planner-project-properties.c: Use the popup button to popup
	the calendar widget.

	* src/planner-task-date-widget.c: New widget for editing the task
	constraint.
	
	* src/planner-task-dialog.c: Add constraint editor, using the
	popup button and task date widget. Fixes bug #134359.

2005-02-20  Richard Hult  <richard@imendio.com>

	* Release 0.12.92.

	* python/planner.defs (open): Update.

	* data/stylesheets/Makefile.am: Install msp2planner stylesheet.

	* libplanner/mrp-project.c: (mrp_project_set_uri): Add.

	* src/planner-main.c: Clean up a bit.

	* src/Makefile.am:
	* src/planner-msp-plugin.c: Add.

	* src/planner-project-properties.c:
	(planner_project_properties_new): Only set values if they exist.
 	
	* src/planner-window.c: (planner_window_open_recent_cb),
	(window_populate), (window_open_cb),
	(window_drag_data_received_cb), (planner_window_open),
	(planner_window_open_in_existing_or_new): Make it possible to open
	a file without adding it to recent files.
